# opencode-antigravity-plugin

./: .gitignore  AGENTS.md  README.md  SPEC.md  bitbucket-pipelines.yml  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json  vitest.config.ts
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
backend/src/opencode_antigravity/: __init__.py  __main__.py  antigravity_client.py  errors.py  handlers.py  prompt_folding.py  protocol.py  server.py
docs/superpowers/plans/: .stack-urls.md  2026-05-20-opencode-antigravity-plugin-mvp.md  2026-05-25-phase2-implementation.md  2026-05-30-resolve-conflicts.md  _pr-urls.md
docs/superpowers/specs/: 2026-05-20-opencode-antigravity-plugin-mvp-design.md  2026-05-25-phase2-design.md  2026-05-25-phase2-sdk-spike.md
src/: backend.ts  errors.ts  index.ts  jsonrpc.ts  logger.ts  schemas.ts  server.ts  types.ts
tests/python/: test_handlers.py  test_hello.py  test_protocol.py  test_server_e2e.py
tests/python/e2e_live/: test_antigravity_client_live_smoke.py
tests/python/integration/: __init__.py  test_antigravity_client_concurrency.py  test_async_dispatch.py
tests/python/unit/: test_antigravity_client.py  test_chat_completions_streaming.py  test_errors.py  test_format_notification.py  test_prompt_folding.py  (+1 more)
tests/ts/: backend.test.ts  errors.sdk.test.ts  errors.test.ts  healthz.phase2.test.ts  hello.test.ts  integration.test.ts  integration_smoke.test.ts  jsonrpc.test.ts  jsonrpc_advanced.test.ts  jsonrpc_notification.test.ts  schemas.test.ts  sse.test.ts  sse_live.test.ts  streaming_call.test.ts
